# decaf-compiler

./: .gitignore  Cargo.toml  Dockerfile  compile_and_run.sh  cr_derby.sh  docker_compile.sh  docker_run.sh  docker_run_hyperfine.sh  fuzz_parse.py  program  program-ref  program.c  run.sh  test_compile.py  test_derby.py  test_parse.dcf  test_parse.py  test_program  test_scan.py  test_semantics.py  test_util.py
doc/phase4-code/qsort_partition/: .original.dcf  0.after-semantic-check.ir  1.after-ssa-construction.ir  2.after-dce.ir  3.after-dce-cp.ir  4.after-dce-cp-cse.ir  5.after-ssa-destruction.ir  README.md
doc/phase5-code/: README.md
doc/phase5-code/coalesce/: with_coalesce.S  without_coalesce.S
doc/phase5-code/const-div-mod/: src.dcf  with_sr.S  without_sr.S
doc/phase5-code/fuse-bc/: block_4_with_fusion.S  block_4_without_fusion.S
doc/phase5-code/gvnpre/: src.dcf
doc/phase5-code/nm-arr/: block_4_without_nm_arr.S  src.dcf
doc/phase5-code/omit-frame-pointer/: src.dcf  with_omit_frame_pointer.S  without_omit_frame_pointer.S
doc/phase5-code/peephole/: src.dcf  with_peephole.S  without_peephole.S
doc/phase5-code/psr/: src.dcf
src/: main.rs
src/assembler/: arr_nm.rs  coalesce.rs  imm_nm.rs  mod.rs  par_copy.rs  peephole.rs  regalloc.rs  term_nm.rs
src/assembler/regalloc/: belady.rs  mod.rs
src/assembler/spill/: belady.rs  mod.rs
src/inter/: constant.rs  error.rs  ir.rs  mod.rs  types.rs
src/opt/: array_dse.rs  array_split.rs  constant_folding.rs  copy_prop.rs  cse.rs  dead_code.rs  dom.rs  function_inlining.rs  gvnpre.rs  indvar.rs  into_ssa.rs  licm.rs  loop_utils.rs  mod.rs  poly.rs  rgae.rs  ssa.rs  unroll.rs
src/parse/: ast.rs  error.rs  parser.rs
src/scan/: error.rs  lexer.rs  location.rs  mod.rs  scanner.rs  token.rs
src/utils/: cli.rs  diagnostics.rs  formatting.rs  mod.rs
tests/semantics/illegal/: coexisting-length-and-initializer.dcf  duplicate-func-decl.dcf  duplicate-var-decl.dcf  invalid-array-length-huge.dcf  (+9 more)
(+3 files in other folders)
