[package]
name = "decaf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0"
num-bigint = "0.4.0"
strum = { version = "0.26", features = ["derive"] }
