[package]
name = "decaf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["ilp"]
# default = []
ilp = ["good_lp"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0"
# Add support for big integers, used in parsing
num-bigint = "0.4.0"
num-traits = "0.2.18"
# Add color to the error output (purely cosmetic)
colored = "2.0.0"
lazy_static = "1.4.0"
# For macro magic
paste = "1.0.0"
# For immutable data structures
im = "15.1"
extend = "1.2.0"
# priority-queue = "2.0"
opener = "0.7"
tempfile = "3.10"

petgraph = "0.6"
# rand = "0.8"
# rand_chacha = "0.3"
# ordered-float = "4.2"

regex = "1.10"
cachedhash = "0.2"
derivative = "2"

# Requires libclang
good_lp = { git = "https://github.com/ma-chengyuan/good_lp.git", rev = "07380b0", default-features = false, features = [
    "highs",
], optional = true }
